<resources>
    <string name="app_name">Relic Recovery Livescoring</string>
    <string name="copyright">© 2018 FTC Alberta. All Rights Reserved.</string>

    <string name="title_autonomous">Autonomous</string>
    <string name="title_teleop">Teleop</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>

    <string name="rail_description">cryptobox rail</string>
    <string name="red_jewel">Red Jewel</string>
    <string name="jewel_base">Jewel Base</string>
    <string name="blue_jewel">Blue Jewel</string>
    <string name="balance_button">balance button</string>
    <string name="safe_zone_button">safe zone button</string>
    <string name="key_2">key 2</string>
    <string name="key_1">key 1</string>
    <string name="key_0">key 0</string>
    <string name="app_logo">app logo</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="alliance_selection">ALLIANCE SELECTION</string>
    <string name="cryptobox_id">CRYPTOBOX ID</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="cryptobox_front">Front</string>
    <string name="cryptobox_back">Back</string>
    <string name="glyph22">glyph22</string>
    <string name="glyph32">glyph32</string>
    <string name="glyph12">glyph12</string>
    <string name="glyph02">glyph02</string>
    <string name="glyph21">glyph21</string>
    <string name="glyph31">glyph31</string>
    <string name="glyph11">glyph11</string>
    <string name="glyph01">glyph01</string>
    <string name="glyph00">glyph00</string>
    <string name="glyph10">glyph10</string>
    <string name="glyph30">glyph30</string>
    <string name="glyph20">glyph20</string>
    <string name="safe_zone">safe_zone</string>
    <string name="reset">Reset</string>
</resources>
