<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/cryptobox"
        layout="@layout/layout_cryptobox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/jewel_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key1" />

    <include
        android:id="@+id/jewel_set"
        layout="@layout/layout_jewel_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cryptobox" />

    <ImageButton
        android:id="@+id/safe_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/safe_zone_blue"
        android:contentDescription="@string/safe_zone_button"
        android:tag="@string/safe_zone"
        app:layout_constraintBottom_toBottomOf="@+id/jewel_set"
        app:layout_constraintEnd_toEndOf="@+id/cryptobox"
        app:layout_constraintTop_toTopOf="@+id/jewel_set" />

    <ImageButton
        android:id="@+id/key0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/key_0"
        app:layout_constraintEnd_toStartOf="@+id/key1"
        app:layout_constraintStart_toStartOf="@+id/cryptobox"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/key_black" />

    <ImageButton
        android:id="@+id/key1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/cryptobox"
        app:layout_constraintStart_toStartOf="@+id/cryptobox"
        android:contentDescription="@string/key_1"
        app:layout_constraintTop_toTopOf="@+id/key0"
        app:srcCompat="@drawable/key_black" />

    <ImageButton
        android:id="@+id/key2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/cryptobox"
        android:contentDescription="@string/key_2"
        app:layout_constraintStart_toEndOf="@+id/key1"
        app:layout_constraintTop_toTopOf="@+id/key1"
        app:srcCompat="@drawable/key_black" />


</android.support.constraint.ConstraintLayout>